// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Search renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 cVrrwF"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 dAqFAf"
        disabled={true}
        placeholder=" "
        type="search"
        value="Text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 cVrrwF"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 kNenzE"
        disabled={true}
        placeholder=" "
        type="search"
        value="Text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 cVrrwF"
      disabled={true}
    >
      <div
        className="Inner-sc-1soq84i-0 giDsHQ"
      >
        <input
          className="Input-qkdgvx-0 bDOCky"
          disabled={true}
          placeholder=" "
          type="search"
          value="Text"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 bVMkaN"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="HintText-sc-1e9hzxr-0 gliQQD"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 ktdFsG"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="HintText-sc-1e9hzxr-0 gliQQD"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 giDsHQ"
      >
        <input
          className="Input-qkdgvx-0 euWOQs"
          placeholder="e.g. EPL"
          type="search"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 gliQQD"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 dAqFAf"
        placeholder=" "
        readOnly={true}
        type="search"
        value="Read only text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 kNenzE"
        placeholder=" "
        readOnly={true}
        type="search"
        value="Read only text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 giDsHQ"
      >
        <input
          className="Input-qkdgvx-0 bDOCky"
          placeholder=" "
          readOnly={true}
          type="search"
          value="Read only text"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 dAqFAf"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 kNenzE"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 giDsHQ"
      >
        <input
          className="Input-qkdgvx-0 bDOCky"
          placeholder="e.g. EPL"
          type="search"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 dAqFAf"
        placeholder="e.g. EPL"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 kNenzE"
        placeholder="e.g. EPL"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 giDsHQ"
      >
        <input
          className="Input-qkdgvx-0 bDOCky"
          placeholder="e.g. EPL"
          type="search"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <input
        className="Input-qkdgvx-0 dAqFAf"
        placeholder="medium"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <input
        className="Input-qkdgvx-0 kNenzE"
        placeholder="large"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 giDsHQ"
      >
        <input
          className="Input-qkdgvx-0 eqBhOj"
          placeholder="xlarge"
          type="search"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 xWjCo"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 elOyFL"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 enHEsf"
      >
        <input
          className="Input-qkdgvx-0 bDOCky"
          placeholder="e.g. EPL"
          type="search"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
